--- a/index.html
+++ b/index.html
@@ -1,1 +1,216 @@
-<link rel="stylesheet" href="css/style.css"> <!DOCTYPE html> <html lang="en"> <head> <meta charset="UTF-8"> <title>Abdullayee MF. Donzo | IT, Software, Cybersecurity</title> <meta name="viewport" content="width=device-width, initial-scale=1.0"> </head> <body> <section> <h1>Abdullayee MF. Donzo</h1> <p>IT and Software Development Enthusiast</p> <p> I am a Computer Science student at Albukhary International University with strong interest in software development, cybersecurity, digital systems, and structured project work. I focus on documentation, workflow planning, testing, system logic, and basic security analysis. </p> </section> <section> <h2>Contact</h2> <p>Email. abdullayee.mfdonzo@student.aiu.edu.my</p> <p>GitHub. github.com/abdul14641</p> <p>LinkedIn. linkedin.com/in/abdullayee-mf-donzo</p> <p>Location. Alor Setar, Kedah, Malaysia</p> </section> <section> <h2>Education</h2> <p>Bachelor of Computer Science (Honour) </p> <p>Albukhary International University, Malaysia</p> <p>2023 to Present</p> </section> <section> <h2>Projects</h2> <h3>IPRT System Development</h3> <p>Role. Key Developer</p> <ul> <li>Built and maintained modules for information processing.</li> <li>Assisted with deployment and cloud testing.</li> </ul> <h3>Key Logger Prevention Mechanism</h3> <p>Role. Lead Author</p> <ul> <li>Designed a framework for detecting and blocking keyloggers.</li> <li>Presented findings at an academic session.</li> </ul> <h3>Online Retail Store Database</h3> <p>Role. Database Designer</p> <ul> <li>Structured database schema for orders and inventory.</li> <li>Improved query performance.</li> </ul> <h3>Cyber Ethics Report</h3> <p>Role. Team Lead</p> <ul> <li>Produced a report on digital responsibility and legal aspects.</li> <li>Managed a four person team and presented findings.</li> </ul> <h3>Virtual Accessibility Software</h3> <p>Role. Co Developer</p> <ul> <li>Built navigation flows for visually impaired users.</li> <li>Added audio prompts and tested core functions.</li> </ul> <h3>Multi Tenant SaaS Platform</h3> <p>Role. Product and System Support</p> <ul> <li>Reviewed user requirements and planned workflows.</li> <li>Documented system logic and tested features.</li> </ul> </section> <section> <h2>Technical Skills</h2> <p>Programming. C, Java, JavaScript, HTML, Dart Flutter</p> <p>Tools. Git, Linux, Nmap, Wireshark, Burp Suite, Kali Linux, Parrot OS</p> <p>Cloud. Basic cloud deployment, server testing, version control</p> <p>Database. SQL, schema planning, data checks, performance notes</p> <p>Testing and Analysis. Feature testing, workflow review, error reporting, data validation</p> <p>Other. Documentation, simple UI checks, team communication, system flow planning</p> </section> <section> <h2>Certifications</h2> <ul> <li>Coursera Foundations of Cybersecurity</li> <li>Web Security and Bug Bounty Learn PenTest</li> <li>Cisco Cybersecurity Essentials</li> <li>Cloud and network security short courses</li> <li>PCEP Certified Entry Level Python</li> </ul> </section> <section> <h2>Strengths</h2> <ul> <li>Fast learner</li> <li>Strong teamwork and leadership</li> <li>Problem solving and analytical thinking</li> <li>Fluent English communication</li> </ul> </section> </body> </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Abdullayee MF. Donzo | IT, Software, Cybersecurity</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, Helvetica, sans-serif;
+      background-color: #f8fafc;
+      color: #111827;
+      line-height: 1.6;
+    }
+
+    header {
+      max-width: 1000px;
+      margin: 40px auto 20px auto;
+      padding: 32px;
+      background-color: #ffffff;
+      border-radius: 8px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
+      text-align: center;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 32px;
+      color: #0f172a;
+    }
+
+    header p {
+      margin: 8px 0 20px 0;
+      font-size: 16px;
+      color: #374151;
+    }
+
+    .cv-button {
+      display: inline-block;
+      padding: 12px 20px;
+      background-color: #2563eb;
+      color: #ffffff;
+      border-radius: 6px;
+      text-decoration: none;
+      font-size: 15px;
+    }
+
+    .cv-button:hover {
+      background-color: #1e40af;
+    }
+
+    section {
+      max-width: 1000px;
+      margin: 20px auto;
+      padding: 24px;
+      background-color: #ffffff;
+      border-radius: 8px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
+    }
+
+    h2 {
+      margin-top: 0;
+      font-size: 22px;
+      color: #0f172a;
+      border-bottom: 2px solid #e5e7eb;
+      padding-bottom: 6px;
+    }
+
+    h3 {
+      margin-bottom: 4px;
+      font-size: 18px;
+      color: #111827;
+    }
+
+    p {
+      margin: 6px 0;
+    }
+
+    ul {
+      margin: 8px 0 16px 20px;
+      padding: 0;
+    }
+
+    li {
+      margin-bottom: 6px;
+    }
+
+    @media (max-width: 768px) {
+      header,
+      section {
+        margin: 16px;
+        padding: 20px;
+      }
+
+      header h1 {
+        font-size: 26px;
+      }
+
+      h2 {
+        font-size: 20px;
+      }
+    }
+  </style>
+</head>
+
+<body>
+
+<header>
+  <h1>Abdullayee MF. Donzo</h1>
+  <p>IT and Software Development Enthusiast</p>
+  <a class="cv-button" href="assets/Abdullayee_MF_Donzo_Resume_Technical.pdf" download>
+    Download CV
+  </a>
+</header>
+
+<section>
+  <p>
+    I am a Computer Science student at Albukhary International University with strong interest in software development, cybersecurity, digital systems, and structured project work. I focus on documentation, workflow planning, testing, system logic, and basic security analysis.
+  </p>
+</section>
+
+<section>
+  <h2>Contact</h2>
+  <p>Email: abdullayee.mfdonzo@student.aiu.edu.my</p>
+  <p>GitHub: https://github.com/abdul14641</p>
+  <p>LinkedIn: https://www.linkedin.com/in/abdullayee-mf-donzo</p>
+  <p>Location: Alor Setar, Kedah, Malaysia</p>
+</section>
+
+<section>
+  <h2>Education</h2>
+  <p>Bachelor of Science in Information Technology</p>
+  <p>Albukhary International University, Malaysia</p>
+  <p>2023 to Present</p>
+</section>
+
+<section>
+  <h2>Projects</h2>
+
+  <h3>IPRT System Development</h3>
+  <p>Role: Key Developer</p>
+  <ul>
+    <li>Built and maintained modules for information processing</li>
+    <li>Assisted with deployment and cloud testing</li>
+  </ul>
+
+  <h3>Key Logger Prevention Mechanism</h3>
+  <p>Role: Lead Author</p>
+  <ul>
+    <li>Designed framework for detecting and blocking keyloggers</li>
+    <li>Presented findings at academic session</li>
+  </ul>
+
+  <h3>Online Retail Store Database</h3>
+  <p>Role: Database Designer</p>
+  <ul>
+    <li>Structured schema for orders and inventory</li>
+    <li>Improved query response performance</li>
+  </ul>
+
+  <h3>Cyber Ethics Report</h3>
+  <p>Role: Team Lead</p>
+  <ul>
+    <li>Produced report on digital responsibility and legal aspects</li>
+    <li>Managed four person team and presented findings</li>
+  </ul>
+
+  <h3>Virtual Accessibility Software</h3>
+  <p>Role: Co Developer</p>
+  <ul>
+    <li>Built navigation flows for visually impaired users</li>
+    <li>Added audio prompts and tested core functions</li>
+  </ul>
+
+  <h3>Multi Tenant SaaS Platform</h3>
+  <p>Role: Product and System Support</p>
+  <ul>
+    <li>Reviewed user requirements and planned workflows</li>
+    <li>Documented system logic and tested features</li>
+  </ul>
+</section>
+
+<section>
+  <h2>Technical Skills</h2>
+  <p>Programming: C, Java, JavaScript, HTML, Dart Flutter</p>
+  <p>Tools: Git, Linux, Nmap, Wireshark, Burp Suite, Kali Linux, Parrot OS</p>
+  <p>Cloud: Basic cloud deployment, server testing, version control</p>
+  <p>Database: SQL, schema planning, data checks, performance notes</p>
+  <p>Testing and Analysis: Feature testing, workflow review, error reporting, data validation</p>
+  <p>Other: Documentation, UI checks, team communication, system flow planning</p>
+</section>
+
+<section>
+  <h2>Certifications</h2>
+  <ul>
+    <li>Coursera Foundations of Cybersecurity</li>
+    <li>Web Security and Bug Bounty Learn PenTest</li>
+    <li>Cisco Cybersecurity Essentials</li>
+    <li>Cloud and network security short courses</li>
+    <li>PCEP Certified Entry Level Python</li>
+  </ul>
+</section>
+
+<section>
+  <h2>Strengths</h2>
+  <ul>
+    <li>Fast learner</li>
+    <li>Strong teamwork and leadership</li>
+    <li>Problem solving and analytical thinking</li>
+    <li>Fluent English communication</li>
+  </ul>
+</section>
+
+</body>
+</html>
