--- a/index.html
+++ b/index.html
@@ -4,104 +4,7 @@
   <meta charset="UTF-8">
   <title>Abdullayee MF. Donzo | IT, Software, Cybersecurity</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, Helvetica, sans-serif;
-      background-color: #f8fafc;
-      color: #111827;
-      line-height: 1.6;
-    }
-
-    header {
-      max-width: 1000px;
-      margin: 40px auto 20px auto;
-      padding: 32px;
-      background-color: #ffffff;
-      border-radius: 8px;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
-      text-align: center;
-    }
-
-    header h1 {
-      margin: 0;
-      font-size: 32px;
-      color: #0f172a;
-    }
-
-    header p {
-      margin: 8px 0 20px 0;
-      font-size: 16px;
-      color: #374151;
-    }
-
-    .cv-button {
-      display: inline-block;
-      padding: 12px 20px;
-      background-color: #2563eb;
-      color: #ffffff;
-      border-radius: 6px;
-      text-decoration: none;
-      font-size: 15px;
-    }
-
-    .cv-button:hover {
-      background-color: #1e40af;
-    }
-
-    section {
-      max-width: 1000px;
-      margin: 20px auto;
-      padding: 24px;
-      background-color: #ffffff;
-      border-radius: 8px;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
-    }
-
-    h2 {
-      margin-top: 0;
-      font-size: 22px;
-      color: #0f172a;
-      border-bottom: 2px solid #e5e7eb;
-      padding-bottom: 6px;
-    }
-
-    h3 {
-      margin-bottom: 4px;
-      font-size: 18px;
-      color: #111827;
-    }
-
-    p {
-      margin: 6px 0;
-    }
-
-    ul {
-      margin: 8px 0 16px 20px;
-      padding: 0;
-    }
-
-    li {
-      margin-bottom: 6px;
-    }
-
-    @media (max-width: 768px) {
-      header,
-      section {
-        margin: 16px;
-        padding: 20px;
-      }
-
-      header h1 {
-        font-size: 26px;
-      }
-
-      h2 {
-        font-size: 20px;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -118,6 +21,20 @@
   <p>
     I am a Computer Science student at Albukhary International University with strong interest in software development, cybersecurity, digital systems, and structured project work. I focus on documentation, workflow planning, testing, system logic, and basic security analysis.
   </p>
+</section>
+
+<section>
+  <h2>Cybersecurity Focus</h2>
+  <p>
+    I have hands on academic exposure to cybersecurity concepts, tools, and ethical practices. My work focuses on basic threat awareness, defensive techniques, and structured security analysis.
+  </p>
+  <ul>
+    <li>Designed a keylogger detection and prevention framework</li>
+    <li>Studied ethical hacking and penetration testing fundamentals</li>
+    <li>Hands on experience with Nmap, Wireshark, Burp Suite, and Linux security tools</li>
+    <li>Completed multiple cybersecurity and network security certifications</li>
+    <li>Applied cybersecurity ethics and legal principles in academic research</li>
+  </ul>
 </section>
 
 <section>
