Revise cybersecurity section and add footer
Updated content for clarity and conciseness, and added footer with contact links.

--- a/index.html
+++ b/index.html
@@ -26,23 +26,14 @@
 <section>
   <h2>Cybersecurity Focus</h2>
   <p>
-    I have hands on academic exposure to cybersecurity concepts, tools, and ethical practices. My work focuses on basic threat awareness, defensive techniques, and structured security analysis.
+    I have academic exposure to cybersecurity concepts, tools, and ethical practices with focus on defensive analysis and system security fundamentals.
   </p>
   <ul>
-    <li>Designed a keylogger detection and prevention framework</li>
-    <li>Studied ethical hacking and penetration testing fundamentals</li>
-    <li>Hands on experience with Nmap, Wireshark, Burp Suite, and Linux security tools</li>
-    <li>Completed multiple cybersecurity and network security certifications</li>
-    <li>Applied cybersecurity ethics and legal principles in academic research</li>
+    <li>Keylogger detection and prevention framework design</li>
+    <li>Cybersecurity ethics and legal responsibility research</li>
+    <li>Hands on use of Nmap, Wireshark, Burp Suite, Linux tools</li>
+    <li>Foundational penetration testing and network security concepts</li>
   </ul>
-</section>
-
-<section>
-  <h2>Contact</h2>
-  <p>Email: abdullayee.mfdonzo@student.aiu.edu.my</p>
-  <p>GitHub: https://github.com/abdul14641</p>
-  <p>LinkedIn: https://www.linkedin.com/in/abdullayee-mf-donzo</p>
-  <p>Location: Alor Setar, Kedah, Malaysia</p>
 </section>
 
 <section>
@@ -56,42 +47,42 @@
   <h2>Projects</h2>
 
   <h3>IPRT System Development</h3>
-  <p>Role: Key Developer</p>
+  <p>Role. Key Developer</p>
   <ul>
     <li>Built and maintained modules for information processing</li>
     <li>Assisted with deployment and cloud testing</li>
   </ul>
 
   <h3>Key Logger Prevention Mechanism</h3>
-  <p>Role: Lead Author</p>
+  <p>Role. Lead Author</p>
   <ul>
     <li>Designed framework for detecting and blocking keyloggers</li>
     <li>Presented findings at academic session</li>
   </ul>
 
   <h3>Online Retail Store Database</h3>
-  <p>Role: Database Designer</p>
+  <p>Role. Database Designer</p>
   <ul>
     <li>Structured schema for orders and inventory</li>
-    <li>Improved query response performance</li>
+    <li>Improved query performance</li>
   </ul>
 
   <h3>Cyber Ethics Report</h3>
-  <p>Role: Team Lead</p>
+  <p>Role. Team Lead</p>
   <ul>
     <li>Produced report on digital responsibility and legal aspects</li>
-    <li>Managed four person team and presented findings</li>
+    <li>Managed four person team</li>
   </ul>
 
   <h3>Virtual Accessibility Software</h3>
-  <p>Role: Co Developer</p>
+  <p>Role. Co Developer</p>
   <ul>
     <li>Built navigation flows for visually impaired users</li>
     <li>Added audio prompts and tested core functions</li>
   </ul>
 
   <h3>Multi Tenant SaaS Platform</h3>
-  <p>Role: Product and System Support</p>
+  <p>Role. Product and System Support</p>
   <ul>
     <li>Reviewed user requirements and planned workflows</li>
     <li>Documented system logic and tested features</li>
@@ -100,12 +91,12 @@
 
 <section>
   <h2>Technical Skills</h2>
-  <p>Programming: C, Java, JavaScript, HTML, Dart Flutter</p>
-  <p>Tools: Git, Linux, Nmap, Wireshark, Burp Suite, Kali Linux, Parrot OS</p>
-  <p>Cloud: Basic cloud deployment, server testing, version control</p>
-  <p>Database: SQL, schema planning, data checks, performance notes</p>
-  <p>Testing and Analysis: Feature testing, workflow review, error reporting, data validation</p>
-  <p>Other: Documentation, UI checks, team communication, system flow planning</p>
+  <p>Programming. C, Java, JavaScript, HTML, Dart Flutter</p>
+  <p>Tools. Git, Linux, Nmap, Wireshark, Burp Suite, Kali Linux, Parrot OS</p>
+  <p>Cloud. Basic cloud deployment, server testing, version control</p>
+  <p>Database. SQL, schema planning, data checks, performance notes</p>
+  <p>Testing. Feature testing, workflow review, error reporting, data validation</p>
+  <p>Other. Documentation, UI checks, team communication, system flow planning</p>
 </section>
 
 <section>
@@ -128,6 +119,17 @@
     <li>Fluent English communication</li>
   </ul>
 </section>
+
+<footer>
+  <div>
+    <p>© 2025 Abdullayee MF. Donzo</p>
+    <p>
+      <a href="mailto:abdullayee.mfdonzo@student.aiu.edu.my">Email</a> |
+      <a href="https://github.com/abdul14641" target="_blank">GitHub</a> |
+      <a href="https://www.linkedin.com/in/abdullayee-mf-donzo" target="_blank">LinkedIn</a>
+    </p>
+  </div>
+</footer>
 
 </body>
 </html>
