--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       padding: 32px;
       background-color: #ffffff;
       border-radius: 8px;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
+      box-shadow: 0 2px 8px rgba(0,0,0,0.08);
       text-align: center;
     }
 
@@ -44,10 +44,12 @@
       border-radius: 6px;
       text-decoration: none;
       font-size: 15px;
+      transition: background-color 0.2s ease, transform 0.2s ease;
     }
 
     .cv-button:hover {
       background-color: #1e40af;
+      transform: translateY(-2px);
     }
 
     section {
@@ -56,7 +58,7 @@
       padding: 24px;
       background-color: #ffffff;
       border-radius: 8px;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
+      box-shadow: 0 2px 8px rgba(0,0,0,0.08);
     }
 
     h2 {
@@ -73,10 +75,6 @@
       color: #111827;
     }
 
-    p {
-      margin: 6px 0;
-    }
-
     ul {
       margin: 8px 0 0 18px;
       padding: 0;
@@ -86,7 +84,6 @@
       margin-bottom: 6px;
     }
 
-    /* PROJECT GRID */
     .projects-grid {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
@@ -98,12 +95,13 @@
       background-color: #f9fafb;
       padding: 18px;
       border-radius: 8px;
-      box-shadow: 0 1px 4px rgba(0, 0, 0, 0.08);
+      box-shadow: 0 1px 4px rgba(0,0,0,0.08);
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
     }
 
-    .project-card p {
-      font-weight: bold;
-      margin-top: 0;
+    .project-card:hover {
+      transform: translateY(-6px);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.12);
     }
 
     footer {
@@ -111,17 +109,19 @@
       margin: 40px auto;
       padding: 20px;
       text-align: center;
-      color: #374151;
       font-size: 14px;
+      color: #374151;
     }
 
     footer a {
       color: #2563eb;
       text-decoration: none;
+      margin: 0 6px;
+      transition: color 0.2s ease;
     }
 
     footer a:hover {
-      text-decoration: underline;
+      color: #1e40af;
     }
 
     @media (max-width: 1024px) {
@@ -236,30 +236,13 @@
   </div>
 </section>
 
-<section>
-  <h2>Technical Skills</h2>
-  <p>Programming. C, Java, JavaScript, HTML, Dart Flutter</p>
-  <p>Tools. Git, Linux, Nmap, Wireshark, Burp Suite, Kali Linux, Parrot OS</p>
-  <p>Cloud. Basic cloud deployment, server testing, version control</p>
-  <p>Database. SQL, schema planning, data checks, performance notes</p>
-  <p>Testing. Feature testing, workflow review, error reporting, data validation</p>
-</section>
-
-<section>
-  <h2>Certifications</h2>
-  <ul>
-    <li>Coursera Foundations of Cybersecurity</li>
-    <li>Web Security and Bug Bounty Learn PenTest</li>
-    <li>Cisco Cybersecurity Essentials</li>
-    <li>PCEP Certified Entry Level Python</li>
-  </ul>
-</section>
-
 <footer>
   <p>© 2025 Abdullayee MF. Donzo</p>
   <p>
-    <a href="mailto:abdullayee.mfdonzo@student.aiu.edu.my">Email</a> |
-    <a href="https://github.com/abdul14641" target="_blank">GitHub</a> |
+    <a href="mailto:abdullayee.mfdonzo@student.aiu.edu.my">Email</a>
+    |
+    <a href="https://github.com/abdul14641" target="_blank">GitHub</a>
+    |
     <a href="https://www.linkedin.com/in/abdullayee-mf-donzo" target="_blank">LinkedIn</a>
   </p>
 </footer>
