--- a/index.html
+++ b/index.html
@@ -104,6 +104,16 @@
       box-shadow: 0 8px 20px rgba(0,0,0,0.12);
     }
 
+    .badge {
+      display: inline-block;
+      margin-bottom: 6px;
+      padding: 4px 10px;
+      font-size: 12px;
+      background-color: #e0e7ff;
+      color: #1e40af;
+      border-radius: 999px;
+    }
+
     footer {
       max-width: 1100px;
       margin: 40px auto;
@@ -117,11 +127,10 @@
       color: #2563eb;
       text-decoration: none;
       margin: 0 6px;
-      transition: color 0.2s ease;
     }
 
     footer a:hover {
-      color: #1e40af;
+      text-decoration: underline;
     }
 
     @media (max-width: 1024px) {
@@ -180,11 +189,24 @@
   <div class="projects-grid">
 
     <div class="project-card">
+      <span class="badge">In Development</span>
+      <h3>Musfan LMS</h3>
+      <p>Founder and System Architect</p>
+      <ul>
+        <li>Built a working multi tenant LMS prototype for education</li>
+        <li>Implemented role based access and tenant isolation</li>
+        <li>Deployed and tested Android and iOS builds</li>
+        <li>Working on macOS, Linux, and Windows support</li>
+        <li>Planned company launch in Liberia between Jan and Mar 2027</li>
+      </ul>
+    </div>
+
+    <div class="project-card">
       <h3>IPRT System Development</h3>
       <p>Key Developer</p>
       <ul>
         <li>Built and maintained information processing modules</li>
-        <li>Assisted with cloud deployment and testing</li>
+        <li>Assisted with deployment and cloud testing</li>
       </ul>
     </div>
 
@@ -224,25 +246,44 @@
       </ul>
     </div>
 
-    <div class="project-card">
-      <h3>Multi Tenant SaaS Platform</h3>
-      <p>Product and System Support</p>
-      <ul>
-        <li>Reviewed user requirements and workflows</li>
-        <li>Documented logic and tested system behavior</li>
-      </ul>
-    </div>
-
   </div>
+</section>
+
+<section>
+  <h2>Technical Skills</h2>
+  <p>Programming. C, Java, JavaScript, HTML, Dart Flutter</p>
+  <p>Tools. Git, Linux, Nmap, Wireshark, Burp Suite, Kali Linux, Parrot OS</p>
+  <p>Cloud. Basic cloud deployment, server testing, version control</p>
+  <p>Database. SQL, schema planning, data checks, performance notes</p>
+  <p>Testing. Feature testing, workflow review, error reporting, data validation</p>
+</section>
+
+<section>
+  <h2>Certifications</h2>
+  <ul>
+    <li>Coursera Foundations of Cybersecurity</li>
+    <li>Web Security and Bug Bounty Learn PenTest</li>
+    <li>Cisco Cybersecurity Essentials</li>
+    <li>Cloud and network security short courses</li>
+    <li>PCEP Certified Entry Level Python</li>
+  </ul>
+</section>
+
+<section>
+  <h2>Strengths</h2>
+  <ul>
+    <li>Fast learner</li>
+    <li>Strong teamwork and leadership</li>
+    <li>Problem solving and analytical thinking</li>
+    <li>Fluent English communication</li>
+  </ul>
 </section>
 
 <footer>
   <p>© 2025 Abdullayee MF. Donzo</p>
   <p>
-    <a href="mailto:abdullayee.mfdonzo@student.aiu.edu.my">Email</a>
-    |
-    <a href="https://github.com/abdul14641" target="_blank">GitHub</a>
-    |
+    <a href="mailto:abdullayee.mfdonzo@student.aiu.edu.my">Email</a> |
+    <a href="https://github.com/abdul14641" target="_blank">GitHub</a> |
     <a href="https://www.linkedin.com/in/abdullayee-mf-donzo" target="_blank">LinkedIn</a>
   </p>
 </footer>
